@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.568 2006/02/10 15:48:23 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.569 2006/02/10 23:01:21 rocket Exp $
+
+  10 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Allow multiple overlays for root_overlay and overlay spec option
 
   10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
